[gd_scene load_steps=20 format=2]

[ext_resource path="res://Player/player.gd" type="Script" id=1]
[ext_resource path="res://Bullet/normal/normal_bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://Bullet/Fast/fast_bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bullet/Big/big_bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://Player/aim.png" type="Texture" id=5]
[ext_resource path="res://PickUP/Fast/fast_pick_up.png" type="Texture" id=6]
[ext_resource path="res://PickUP/Fast/fast_effect.tscn" type="PackedScene" id=7]
[ext_resource path="res://PickUP/Big/big_pick_up.png" type="Texture" id=8]
[ext_resource path="res://PickUP/Shockwafe.tscn" type="PackedScene" id=9]
[ext_resource path="res://Player/walk_smoke.tscn" type="PackedScene" id=10]
[ext_resource path="res://Player/shadow.png" type="Texture" id=11]
[ext_resource path="res://GUI/Manabar/mana_bar_fill.png" type="Texture" id=12]
[ext_resource path="res://GUI/Manabar/mana_bar_empty.png" type="Texture" id=13]
[ext_resource path="res://Player/ManaAnimation/EmptyMana.tres" type="Animation" id=14]
[ext_resource path="res://Player/modifiers.gd" type="Script" id=15]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 18.7156, 57.1739 )

[sub_resource type="StyleBoxTexture" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 12 )
region_rect = Rect2( 0, 0, 160, 42 )
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true
_sections_unfolded = [ "Modulate" ]

[sub_resource type="StyleBoxTexture" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
texture = ExtResource( 13 )
region_rect = Rect2( 0, 0, 160, 42 )
margin_left = 0.0
margin_right = 0.0
margin_top = 0.0
margin_bottom = 0.0
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
modulate_color = Color( 1, 1, 1, 1 )
draw_center = true

[sub_resource type="Animation" id=4]

resource_name = "FillMana"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Mana/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 1, 0.0859375, 0.723765 ), Color( 1, 1, 1, 0 ), Color( 0, 1, 0.0859375, 0.685059 ), Color( 1, 1, 1, 0 ), Color( 0, 1, 0.0859375, 0.696157 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Player" type="KinematicBody2D" index="0"]

scale = Vector2( 1.25, 1.25 )
input_pickable = false
collision_layer = 4
collision_mask = 11
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "Z Index" ]
bullet_template = ExtResource( 2 )
bullet_fast_template = ExtResource( 3 )
bullet_big_template = ExtResource( 4 )
movement_speed = 425
aim_speed = 3.5
chance_to_say_something_stupid = 0.25
max_health = 5
dodge_distance = 250
max_mana = 50
start_mana = 25
throw_mana = 5
dodge_mana = 3
mana_increase = 1

[node name="CollisionShape" type="CollisionShape2D" parent="." index="0"]

position = Vector2( 0, -46.7705 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Aim" type="Node2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( 0, -55 )
scale = Vector2( 0.75, 0.75 )
_sections_unfolded = [ "Transform" ]

[node name="Direction" type="Sprite" parent="Aim" index="0"]

position = Vector2( 300.825, 0 )
scale = Vector2( 1.25, 0.66 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Special" type="Node2D" parent="Aim" index="1"]

editor/display_folded = true
position = Vector2( 248.266, 1.43688 )
scale = Vector2( 1.33333, 1.33333 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="Fast" type="Sprite" parent="Aim/Special" index="0"]

editor/display_folded = true
visible = false
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="FastEffect" parent="Aim/Special/Fast" index="0" instance=ExtResource( 7 )]

position = Vector2( -69.7487, 67.7322 )
scale = Vector2( 2, 2 )

[node name="Big" type="Sprite" parent="Aim/Special" index="1"]

editor/display_folded = true
visible = false
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="Shockwafe" parent="Aim/Special/Big" index="0" instance=ExtResource( 9 )]

modulate = Color( 0.403922, 0.243137, 0.815686, 1 )
position = Vector2( 2.38196, 18.2539 )
scale = Vector2( 3, 3 )
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform", "Visibility" ]

[node name="Smoke" parent="." index="2" instance=ExtResource( 10 )]

position = Vector2( 0, 5.37258 )
z_index = -18
_sections_unfolded = [ "Drawing", "Process Material", "Textures", "Time", "Transform", "Visibility", "Z Index" ]

[node name="Shadow" type="Sprite" parent="." index="3"]

position = Vector2( 0.67923, 5.22228 )
scale = Vector2( 0.202378, 0.202378 )
z_index = -18
texture = ExtResource( 11 )
_sections_unfolded = [ "Z Index" ]

[node name="Mana" type="ProgressBar" parent="." index="4"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -50.0
margin_top = 21.0
margin_right = 356.0
margin_bottom = 63.0
rect_scale = Vector2( 0.25, 0.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
percent_visible = false

[node name="Sprite" type="Sprite" parent="Mana" index="0"]

modulate = Color( 1, 1, 1, 0 )
position = Vector2( 201.6, 20.8 )
scale = Vector2( 2.5, 1 )
texture = ExtResource( 12 )
_sections_unfolded = [ "Visibility" ]

[node name="Timer" type="Node" parent="." index="5"]

[node name="Mana" type="Timer" parent="Timer" index="0"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[node name="Indestructable" type="Timer" parent="Timer" index="1"]

process_mode = 1
wait_time = 1.3
one_shot = true
autostart = false

[node name="Throw" type="Timer" parent="Timer" index="2"]

process_mode = 1
wait_time = 0.5
one_shot = true
autostart = false

[node name="Dodge" type="Timer" parent="Timer" index="3"]

process_mode = 1
wait_time = 0.15
one_shot = true
autostart = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/EmptyMana = ExtResource( 14 )
anims/FillMana = SubResource( 4 )
blend_times = [  ]

[node name="Modifiers" type="Node" parent="." index="7"]

script = ExtResource( 15 )

[connection signal="timeout" from="Timer/Mana" to="." method="_on_ManaTimer_timeout"]

[connection signal="timeout" from="Timer/Indestructable" to="." method="_on_IndestructableTimer_timeout"]

[connection signal="timeout" from="Timer/Dodge" to="." method="_on_Dodge_timeout"]


